# langtree

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  docs.yml
docs/internal/: CODING_STANDARDS.md  COMPREHENSIVE_GUIDE.md  DESIGN_EXPLORATION.md  PROMPT_ELEMENT_SYSTEM.md  README.md  TAG_BASED_ARCHITECTURE.md  VALIDATION_ARCHITECTURE.md
docs/public/: LANGUAGE_SPECIFICATION.md  VARIABLE_TAXONOMY.md  getting-started.md  index.md
src/langtree/: __init__.py  chains.py  dynamic.py  models.py
tests/: conftest.py  test_comprehensive_comment_parsing.py  test_dynamic.py  test_utils.py
tests/commands/: __init__.py  test_parser.py
tests/core/: test_tree_node.py
tests/exceptions/: test_core.py
tests/execution/: test_integration.py  test_resolution.py  test_scopes.py  test_type_mapping_integration.py
tests/parsing/: test_parser.py  test_path_resolver.py
tests/prompt/: __init__.py  test_assembly_variable_separation.py  test_context_resolution.py  test_integration.py  test_registry.py  test_resolution.py  test_structure.py  test_template_variables.py  test_todos.py  test_variable_separation.py
tests/structure/: test_builder.py  test_builder_validation_simple.py  test_error_context_integration.py  test_format_descriptions.py  test_registry.py  test_type_conversion.py  test_validation.py
tests/templates/: test_collected_context_bug.py  test_docstring_processing.py  test_element_resolution.py  test_get_prompt_chain.py  test_output_format.py  (+9 more)
(+46 files in other folders)
